gitops/policy/block-storage-class.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sStorageClass
metadata:
  name: allowed-storageclass
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolumeClaim"]
      - apiGroups: ["apps"]
        kinds: ["StatefulSet"]
    namespaceSelector:
      matchExpressions:
        - key: tenant
          operator: Exists
  parameters:
    includeStorageClassesInMessage: true
    allowedStorageClasses:
      - hcloud-volumes
